src/cli/snapshots/vimit__cli__monitor__tests__tui_snapshot_mini_preset.snap
---
source: src/cli/monitor.rs
expression: output
---
┌──────────────────────────────────────────────────────────┐
┌──────────────────────────────────────────────────────────┐
│5h 78% reset через 3ч 59м                                 │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│24h 51% reset через 18ч 59м                               │
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────┐
│30d 41% reset через 20д 23ч                               │
└──────────────────────────────────────────────────────────┘
┌ alerts ──────────────────────────────────────────────────┐
┌ agents ──────────────────────────────────────────────────┐
? help | 5 trends | q quit | r refresh | 5s/3s
