src/cli/snapshots/vimit__cli__monitor__tests__tui_snapshot_waiting.snap
---
source: src/cli/monitor.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ VibeMode v0.6.2 Dir | waiting for data...                                                        │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Limits────────────────────────────────────────────────────────────────────────────────────────────┐
│Collecting VibeMode status...                                                                     │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for data                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│waiting for data                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ q quit   r refresh  auto 5s  next 3s                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
