src/cli/snapshots/vimit__cli__monitor__tests__tui_snapshot_with_error.snap
---
source: src/cli/monitor.rs
expression: output
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ VibeMode v0.6.0 Dir | WARNING | peak 78%                                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
                                                                                                    
 ┌ 5h | warning | reset через 3ч 59м ───────────┐  ┌ 24h | ok | reset через 18ч 59м ──────────────┐ 
 └──────────────────────────────────────────────┘  └──────────────────────────────────────────────┘ 
 cr 39/50 (78%)                                    cr 91/180 (51%)                                  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 ┌ 7d | ok | reset через 5д 23ч ────────────────┐  ┌ 30d | ok | reset через 20д 23ч ──────────────┐ 
 └──────────────────────────────────────────────┘  └──────────────────────────────────────────────┘ 
 cr 214/600 (36%)                                  cr 819/2,0K (41%)                                
                                                                                                    
                                                                                                    
                                                                                                    
┌ alerts ──────────────────────────────────────────────────────────────────────────────────────────┐
│warning 5h/credits at 78.0%: 11 left, reset через 3ч 59м                                          │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ agents ──────────────────────────────────────────────────────────────────────────────────────────┐
│token rate 42.0/min | sessions 2 active 1                                                         │
│                                                                                                  │
│                                                                                                  │
 ! connection timeout──────────────────────────────────────────────────────────────────────────────┘
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│ q quit   r refresh  auto 5s  next 3s                                                             │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
